--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -75,6 +75,8 @@ fisher.test(table1)
 ```
 
 
+We ran three inferential tests in this section, two Chi-Squared tests, and a Fisher's Exact test. In the Chi-Squared test we are getting a p value of 0.0000001242 which is far lower than 0.05.& a Chi-Squared equal 27.955 (approx. 28) which is far greater than our critical value for degrees of freedom in this case 1. Given these scores we can infer that there is a difference in the data.
+
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
